# home-telemetry

./: .dockerignore  .gitignore  LOGGING_IMPLEMENTATION.md  README.md  pytest.ini  test.sh
deploy/: README.md  docker-compose.yml
services/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/api/app/: .env.template  current_data.sql  database.py  filters.py  main.py  middlewares.py  models.py  rate_limit.py
services/api/app/auth/: clients.py  dependencies.py  jwt.py
services/api/app/crud/: crud_system.py  datastream.py  deployment.py  feature_of_interest.py  observation.py  observed_property.py  procedure.py  system.py
services/api/app/mqtt/: mqtt_client.py
services/api/app/routers/: admin.py  auth.py  datastreams.py  deployments.py  features_of_interest.py  forecasts.py  observations.py  observed_properties.py  procedures.py  systems.py
services/api/tests/: conftest.py  pyproject.toml  test_forecasts.py  test_observations.py  test_procedures.py
services/db/: README.md  docker-compose.yml
services/elasticsearch/: README.md  docker-compose.yml  filebeat.yml
services/grafana/: README.md  docker-compose.yml
services/ingestion/: .env.template  Dockerfile  README.md  docker-compose.yml  enabled_plugins  init_rabbitmq.py  pyproject.toml  rabbitmq.conf  view_dlq.py
services/ingestion/app/: handlers.py  queue.py  worker.py
services/ingestion/tests/: __init__.py  conftest.py  test_dlq.py  test_handler_registry.py  test_handlers.py  test_queue.py
services/jobs/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_fetch_open_meteo.py
services/jobs/app/: __init__.py  broker.py  handlers.py  queue.py  rabbitmq_consumer.py  scheduler.py  tasks.py  worker.py
services/jobs/app/ml_models/: __init__.py  prophet_model.py
services/jobs/tests/: README.md  conftest.py  test_broker.py  test_handlers.py  test_rabbitmq_consumer.py  test_scheduler.py  test_tasks.py
services/mqtt_broker/: README.md  docker-compose.yml  mosquitto.conf
services/notifier/: .env  .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/notifier/app/: main.py  rules.yaml
services/notifier/tests/: README.md  conftest.py  pytest.ini  test_main.py  test_rules.py
services/redis/: README.md  docker-compose.yml  redis.conf
shared/: LOGGING.md  README.md  logging_config.py  pyproject.toml
shared/logger/: logging_config.py
shared/schemas/: datastream_schemas.py  deployment_schemas.py  feature_of_interest_schemas.py  forecast_schemas.py  observation_schemas.py  observed_property_schemas.py  procedure_schemas.py  system_schemas.py
shared/tests/: __init__.py  test_datastream_schemas.py  test_logger.py  test_observation_schemas.py  test_procedure_schemas.py  test_system_schemas.py
tests/: conftest.py  pyproject.toml  test_auth.py  test_datastreams.py  test_deployments.py  test_features_of_interest.py  test_observations.py  test_observed_properties.py  test_systems.py
