[project]
name = "shared"
version = "0.1.0"
description = "Shared schemas & utilities for Home‑Telemetry"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "loguru>=0.7.2,<1.0.0",
]

[tool.poetry]
packages = [
    { include = "schemas" }
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"