[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared schemas & utilities for Home‑Telemetry"
authors = ["Nikos <nikos.zacharatos@iccs.gr>"]
packages = [
    { include = "logger" },
    { include = "schemas" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = ">=2.7"
loguru = ">=0.7.2,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"