[project]
name = "tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikos",email = "nikos.zacharatos@iccs.gr"}
]
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "testcontainers (>=4.14.1,<5.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "shared @ file:///home/nikos/home-telemetry/shared",
    "redis (>=7.3.0,<8.0.0)",
    "slowapi (>=0.1.9) ; python_version >= \"3.13\" and python_version < \"4.0\"",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest-async (>=0.1.1,<0.2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
shared = {develop = true}

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
