[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikos Zacharatos",email = "nikos.zacharatos@iccs.gr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "geoalchemy2 (>=0.18.1,<0.19.0)",
    "uuid (>=1.30,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
