[project]
name = "ingestion"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikos", email = "nikos.zacharatos@iccs.gr"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "asyncio>=4.0.0,<5.0.0",
    "aio-pika>=9.6.2,<10.0.0",
    "httpx>=0.27.0,<0.28.0",
    "redis>=7.4.0,<8.0.0",
    "pytz>=2026.1.post1,<2027.0",
    "shared @ file:///home/nikos/home-telemetry/shared",
]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
shared = {develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
