[project]
name = "jobs"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikos",email = "nikos.zacharatos@iccs.gr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=7.3.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru>=0.7.2,<1.0.0",
    "shared @ file:///home/nikos/home-telemetry/shared",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
