[project]
name = "jobs"
version = "0.1.0"
description = "Job queue service using Dramatiq"
authors = [
    {name = "Nikos", email = "nikos.zacharatos@iccs.gr"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "dramatiq[redis]>=1.15.0,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "loguru>=0.7.2,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "prophet>=1.1.5,<2.0.0",
    "aio-pika>=9.6.2,<10.0.0",
    "redis>=5.0.0,<6.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

[tool.poetry.dependencies]
shared = { path = "../../shared", develop = true }
pytest = { version = ">=7.4.0,<8.0.0", optional = true }
pytest-asyncio = { version = ">=0.23.0,<1.0.0", optional = true }
pytest-cov = { version = ">=4.1.0,<5.0.0", optional = true }

[tool.poetry.extras]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
